fix: adjusted soldiers z-index

--- a/v2.0/single-js/pt-br/src/assets/css/templates-settings/templates-animations/military_template_animation/military_template_animation.css
+++ b/v2.0/single-js/pt-br/src/assets/css/templates-settings/templates-animations/military_template_animation/military_template_animation.css
@@ -98,6 +98,7 @@ body.military_template .game-menu__template-animation {
   position: absolute;
   top: 30%;
   width: 70px;
+  z-index: 1;
 }
 
 #left_army_soldier {
